// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails - Actions should cancelStep and fail 1`] = `
Array [
  Array [
    Object {
      "type": "TASK_STEP_CANCEL_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel step step-id",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "payload": [Error: Network Error],
      "type": "TASK_STEP_CANCEL_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Could not cancel step. Error: step-id undefined",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TaskDetails - Actions should cancelStep and success 1`] = `
Array [
  Array [
    Object {
      "type": "TASK_STEP_CANCEL_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel step step-id",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "type": "TASK_STEP_CANCEL_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "step-id {__('Step Canceled')}",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`TaskDetails - Actions should fetch-task-details and fail 1`] = `
Array [
  Array [
    Object {
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": [Error: Network Error],
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_FAILURE",
    },
  ],
]
`;

exports[`TaskDetails - Actions should fetch-task-details and success 1`] = `
Array [
  Array [
    Object {
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": "some-data",
      "type": "FOREMAN_TASK_DETAILS_FETCH_TASK_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "timeoutId": 7,
      },
      "type": "FOREMAN_TASK_DETAILS_START_POLLING",
    },
  ],
]
`;

exports[`TaskDetails - Actions should start reload 1`] = `
Object {
  "payload": Object {
    "timeoutId": 1,
  },
  "type": "FOREMAN_TASK_DETAILS_START_POLLING",
}
`;

exports[`TaskDetails - Actions should stop reload 1`] = `
Object {
  "payload": Object {
    "timeoutId": 2,
  },
  "type": "FOREMAN_TASK_DETAILS_STOP_POLLING",
}
`;
